<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@drawable/dialog_corner_style"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
        	android:layout_margin="5dp"
	        android:id="@+id/txt_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:text="@string/app_name"
	        android:textSize="18sp"/>
        
    </LinearLayout>
    
    <View 
        android:id="@+id/view_split"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"/>
    
    <LinearLayout 
        android:id="@+id/lay_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
        	android:layout_margin="30dp"
	        android:id="@+id/txt_messgae"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:text="@string/dialog_message"
	        android:textSize="18sp"/>
        
    </LinearLayout>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_btn_cancel"
            android:background="@drawable/dialog_btn_style"
            android:textSize="18sp"
            android:textColor="@drawable/dialog_btn_font1_style"/>
        <View 
            android:id="@+id/split"
	        android:layout_width="0.5dp"
	        android:layout_height="fill_parent"
	        android:background="@color/gray"/>
        <Button 
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_btn_confirm"
            android:background="@drawable/dialog_btn_style"
            android:textSize="18sp"
            android:textColor="@drawable/dialog_btn_font2_style"/>
    </LinearLayout>

</LinearLayout>