<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:myradio="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:background="@color/white"
    tools:context="longteng.pda.activity.MainActivity">

    <fragment
        android:id="@+id/fragement_menu"
        android:name="longteng.pda.fragment.FragmentMenu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/fragement_receipts"
        android:name="longteng.pda.fragment.FragmentReceipts"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout="@layout/fragment_receipts" />

    <fragment
        android:id="@+id/fragement_personal"
        android:name="longteng.pda.fragment.FragmentPersonal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout="@layout/fragment_personal" />

    <fragment
        android:id="@+id/fragement_settings"
        android:name="longteng.pda.fragment.FragmentSettings"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout="@layout/fragment_settings" />

    <RadioGroup
            android:id="@+id/nav_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/nav_gray"
            android:gravity="bottom"
            android:orientation="horizontal" >
            <longteng.pda.view.NavbarRadioButton
                android:id="@+id/nav_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:button="@null"
                android:checked="true"
                android:clickable="true"
                android:textColor="@color/gray"
                myradio:drawableTop="@drawable/menu_radiobutton"
                myradio:drawableSize="@dimen/nav_bar_size"
                android:gravity="center"
                android:text="@string/main_menu"
                android:textSize="13sp" />

            <longteng.pda.view.NavbarRadioButton
                android:id="@+id/nav_receipts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:button="@null"
                android:textColor="@color/gray"
                android:clickable="true"
                myradio:drawableTop="@drawable/receipts_radiobutton"
                myradio:drawableSize="@dimen/nav_bar_size"
                android:gravity="center"
                android:text="@string/main_receipts"
                android:textSize="13sp" />

            <longteng.pda.view.NavbarRadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:button="@null"
                myradio:drawableSize="@dimen/nav_bar_size"
                android:gravity="center"
                android:visibility="invisible"
                android:textSize="13sp"
                 />

            <longteng.pda.view.NavbarRadioButton
                android:id="@+id/nav_personal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:button="@null"
                myradio:drawableSize="@dimen/nav_bar_size"
                myradio:drawableTop="@drawable/personal_radiobutton"
                android:gravity="center"
                android:clickable="true"
                android:textColor="@color/gray"
                android:text="@string/main_personal"
                android:textSize="13sp" />

            <longteng.pda.view.NavbarRadioButton
                android:id="@+id/nav_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:button="@null"
                android:clickable="true"
                android:textColor="@color/gray"
                myradio:drawableSize="@dimen/nav_bar_size"
                myradio:drawableTop="@drawable/settings_radiobutton"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/main_settings"
                android:textSize="13sp" />
        </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_above="@+id/nav_bar"
        />
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        myradio:srcCompat="@drawable/nav_btn_nor"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/ImageButton" />
</RelativeLayout>